Freshen up the Lee content

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,21 +5,20 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<h2>Full Stack Developer</h2>
+		<p>Mobile apps native and cross platform, cloud-based solutions, IoT, data architecture, devops and delivery.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<p>I've worked with Fortune 500 companies and non-profits working with next to nothing and everything in-between.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Consulting Mindset</h2>
+		<p>Empathetic servant leader and listener. Passionate teammate and digital transformation enabler. A creator with passion.</p>
 	</div>
 </section>
-
 <style>
 	.box {
 		border: 1px solid var(--gray-800);
