add text from October

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,17 +5,17 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack Developer</h2>
-		<p>Mobile apps native and cross platform, cloud-based solutions, IoT, data architecture, devops and delivery.</p>
+		<h2>Full Stack Development</h2>
+		<p>I provide end-to-end application architecture and development services in all phases of your project. From concept and design to implementation and maintenance, my approach focuses on value, efficiency, and measurable results.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>I've worked with Fortune 500 companies and non-profits working with next to nothing and everything in-between.</p>
+		<h2>Enterprise Experience</h2>
+		<p>I've worked with Fortune 500 companies and non-profits and everything in-between.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Consulting Mindset</h2>
+		<h2>Strategy and Consulting</h2>
 		<p>Empathetic servant leader and listener. Passionate teammate and digital transformation enabler. A creator with passion.</p>
 	</div>
 </section>
