--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,13 +30,13 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="It's your boy Lee! Now in splash page form."
-					tagline="Digital transformation leader with a mustache."
+					title="Lee Flannery, full stack, full lifecycle architect."
+					tagline="Hi I'm Lee! I'm a digital transformation leader with a mustache."
 					align="start"
 				>	
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Coder</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Creator</Pill>
+						<Pill><Icon icon="microphone-stage" size="1.33em" /> Creater</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> Consultant</Pill>
 					</div>
 				</Hero>
@@ -50,7 +50,7 @@ const projects = (await getCollection('work'))
 
 			<Skills />
 			<section>
-				<div>I also have experience creating videos, art, training curriculum, audio work, and I've produced a podcast. I've been on social media since before AOL was shipping CDs. Encountered trolling since Usenet. I was building on the internet when you were still in short pants. I'm a great coder, I'm a leader, I'm a mentor, and I'm a content creator.</div>
+				<div>I also have experience creating videos, art, training curriculum, audio work, and I've produced a podcast.</div>
 			</section>
 		</div>
 
