Add November refresh, and freshen up links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear();
 			Made in Grand Rapids, USA with <Icon icon="heart" size="1.2em" />. &copy; {currentYear} Lee Flannery</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/leeflannery"> Twitter</a>
+		<a href="https://twitter.com/fullstackdrip"> Twitter</a>
 		<a href="https://github.com/leeflannery"> GitHub</a>
 	</p>
 </footer>
