--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Lee Flannery, full stack, full lifecycle architect."
-					tagline="Hi I'm Lee! I'm a digital transformation leader with a mustache."
+					title="Lee Flannery, full swag architect."
+					tagline="Digital transformation leader with a mustache. Check my links above!"
 					align="start"
 				>	
 					<div class="roles">
