--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,9 +11,9 @@ const textLinks: { label: string; href: string }[] = [
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'LinkedIn', href: 'https://linkedin.com/in/leeflannery', icon: 'linkedin-logo' },	
-	{ label: 'Threads', href: 'https://threads.net/leeflannery', icon: 'meta-logo' },
-	{ label: 'Twitter', href: 'https://twitter.com/leeflannery', icon: 'twitter-logo' },
-	{ label: 'Instagram', href: 'https://instagram.com/leeflannery', icon: 'instagram-logo' },
+	{ label: 'Threads', href: 'https://threads.net/fullstackdrip', icon: 'meta-logo' },
+	{ label: 'Twitter', href: 'https://twitter.com/fullstackdrip', icon: 'twitter-logo' },
+	{ label: 'Instagram', href: 'https://instagram.com/fullstackdrip', icon: 'instagram-logo' },
 	{ label: 'GitHub', href: 'https://github.com/leeflannery', icon: 'github-logo' },
 ];
 ---
