--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Lee Flannery, full swag architect."
+					title="Lee Flannery: Full Swag Developer."
 					tagline="Digital transformation leader with a mustache. Check my links above!"
 					align="start"
 				>	
