--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,70 +1,81 @@
 ---
+import ThemeToggle from './ThemeToggle.astro';
 import Icon from './Icon.astro';
+
 const currentYear = new Date().getFullYear();
 ---
 
 <footer>
 	<div class="group">
 		<p>
-			Made in Grand Rapids, USA with <Icon icon="heart" size="1.2em" />. &copy; {currentYear} Lee Flannery</p>
+			Made in Grand Rapids, USA with <Icon icon="heart" size="1.2em" />. &copy; {currentYear}
+			Lee Flannery
+		</p>
+		<div class="socials">
+			<a href="https://linkedin.com/in/leeflannery"> LinkedIn</a>
+			<a href="https://threads.net/fullstackdrip"> Threads</a>
+			<a href="https://bsky.app/profile/fullstackdrip.com"> Bluesky</a>
+			<a href="https://twitter.com/fullstackdrip"> Twitter</a>
+			<a href="https://instagram.com/fullstackdrip"> Instagram</a>
+			<a href="https://github.com/leeflannery"> GitHub</a>
+		</div>
+		<ThemeToggle />
 	</div>
-	<p class="socials">
-		<a href="https://twitter.com/fullstackdrip"> Twitter</a>
-		<a href="https://github.com/leeflannery"> GitHub</a>
-	</p>
 </footer>
+
 <style>
 	footer {
 		display: flex;
 		flex-direction: column;
 		gap: 3rem;
-		margin-top: auto;
-		padding: 3rem 2rem 3rem;
+		align-items: center;
+		padding: 3rem 2rem 3.5rem;
 		text-align: center;
-		color: var(--gray-400);
 		font-size: var(--text-sm);
-	}
-
-	footer a {
 		color: var(--gray-400);
-		text-decoration: 1px solid underline transparent;
-		text-underline-offset: 0.25em;
-		transition: text-decoration-color var(--theme-transition);
-	}
-
-	footer a:hover,
-	footer a:focus {
-		text-decoration-color: currentColor;
 	}
 
 	.group {
 		display: flex;
 		flex-direction: column;
-		gap: 0.5rem;
+		gap: 1rem;
+		align-items: center;
+		justify-content: center;
 	}
 
 	.socials {
 		display: flex;
-		justify-content: center;
 		gap: 1rem;
-		flex-wrap: wrap;
+	}
+
+	a {
+		color: var(--gray-400);
+		text-decoration: 1px dotted underline;
+		text-underline-offset: 0.25em;
+	}
+
+	a:hover {
+		color: var(--gray-100);
+	}
+
+	:global(footer .group) {
+		padding: 2rem 0;
 	}
 
 	@media (min-width: 50em) {
 		footer {
 			flex-direction: row;
 			justify-content: space-between;
-			padding: 2.5rem 5rem;
+			text-align: left;
 		}
 
 		.group {
 			flex-direction: row;
-			gap: 1rem;
-			flex-wrap: wrap;
+			gap: 2rem;
 		}
 
-		.socials {
-			justify-content: flex-end;
+		:global(footer .group) {
+			padding: 0;
 		}
 	}
 </style>
