--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,6 +12,7 @@ const textLinks: { label: string; href: string }[] = [
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'LinkedIn', href: 'https://linkedin.com/in/leeflannery', icon: 'linkedin-logo' },	
 	{ label: 'Threads', href: 'https://threads.net/fullstackdrip', icon: 'meta-logo' },
+	{ label: 'Bluesky', href: 'https://bsky.app/profile/fullstackdrip.com', icon: 'bluesky-logo' },
 	{ label: 'Twitter', href: 'https://twitter.com/fullstackdrip', icon: 'twitter-logo' },
 	{ label: 'Instagram', href: 'https://instagram.com/fullstackdrip', icon: 'instagram-logo' },
 	{ label: 'GitHub', href: 'https://github.com/leeflannery', icon: 'github-logo' },
