Upgrade Astro, add bluesky icon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,8 +9,12 @@ const currentYear = new Date().getFullYear();
 			Made in Grand Rapids, USA with <Icon icon="heart" size="1.2em" />. &copy; {currentYear} Lee Flannery</p>
 	</div>
 	<p class="socials">
+		<a href="https://linkedin.com/in/fullstackdrip"> LinkedIn</a>
+		<a href="https://threads.net/fullstackdrip"> Threads</a>
+		<a href="https://bsky.app/profile/fullstackdrip.com"> Bluesky</a>
 		<a href="https://twitter.com/fullstackdrip"> Twitter</a>
-		<a href="https://github.com/leeflannery"> GitHub</a>
+		<a href="https://instagram.com/fullstackdrip"> Instagram</a>
+		<a href="https://github.com/fullstackdrip"> GitHub</a>
 	</p>
 </footer>
 <style>
