--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@
 import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import "../styles/global.css";
 
 interface Props {
 	title?: string | undefined;
@@ -23,8 +24,17 @@ const { title, description } = Astro.props;
 		<div class="stack backgrounds">
 			<Nav />
 			<slot />
+
 			<Footer />
 		</div>
+
+		<script type="module">
+			import { runAnimations } from "/src/scripts/animations.js";
+	  
+			window.addEventListener("DOMContentLoaded", () => {
+			  runAnimations();
+			});
+		</script>
 
 		<script>
 			// Add “loaded” class once the document has completely loaded.
