--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,29 +1,15 @@
 ---
-import { getCollection } from 'astro:content';
-
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 // Component Imports
-import CallToAction from '../components/CallToAction.astro';
-import Grid from '../components/Grid.astro';
 import Hero from '../components/Hero.astro';
 import Icon from '../components/Icon.astro';
 import Pill from '../components/Pill.astro';
-import PortfolioPreview from '../components/PortfolioPreview.astro';
-import { gsap } from "gsap";
-import { ScrollTrigger } from "gsap/ScrollTrigger";
-gsap.registerPlugin(ScrollTrigger);
-
 
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro';
 import Skills from '../components/Skills.astro';
-
-// Content Fetching: List four most recent work projects
-const projects = (await getCollection('work'))
-	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-	.slice(0, 4);
 
 // Full Astro Component Syntax:
 // https://docs.astro.build/core-concepts/astro-components/
@@ -41,7 +27,7 @@ const projects = (await getCollection('work'))
 					>	
 						<div class="roles">
 							<Pill><Icon icon="code" size="1.33em" /> Coder</Pill>
-							<Pill><Icon icon="microphone-stage" size="1.33em" /> Creater</Pill>
+							<Pill><Icon icon="microphone-stage" size="1.33em" /> Creator</Pill>
 							<Pill><Icon icon="pencil-line" size="1.33em" /> Consultant</Pill>
 						</div>
 					</Hero>
@@ -63,24 +49,6 @@ const projects = (await getCollection('work'))
 		<ContactCTA />
 	</div>
 </BaseLayout>
-
-<script>
-	// GSAP animations for fade-in elements
-	gsap.fromTo('.fade-in', 
-		{
-			opacity: 0,
-			y: 30,
-			duration: 0
-		},
-		{
-			opacity: 1,
-			y: 0,
-			duration: 0.8,
-			ease: "power2.out",
-			stagger: 0.2
-		}
-	);
-</script>
 
 <style>
 	.hero {
